--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>scratch geometry dash directory</title>
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
 </head>
 <body>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
