--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
 </head>
 <body>
+  <h1>normal games</h1>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
 <br>
 <a href="https://scratch.mit.edu/projects/143663274/">geometry dash meltdown</a>
 <br>
 <a href="https://scratch.mit.edu/projects/216343253/">geometry dash subzero</a>
 <br>
-<a href="https://scratch.mit.edu/projects/224236914/">geometry dash world</a>
+<a href="https://scratch.mit.edu/projects/224236914/">geometry dash world toxic factory</a>
+  <h1>hacked versions</h1>
+  <a href="https://scratch.mit.edu/projects/349655586/">geometry dash hacked</a>
+  <br>
+  <a href="https://scratch.mit.edu/projects/404062989">geometry dash meltdown hacked</a>
+  <br>
+  <a href="https://scratch.mit.edu/projects/403789231/">geometry dash subzero hacked</a>
+  <br>
+  <a href="https://scratch.mit.edu/projects/405324048">geometry dash world toxic factory hacked</a>
 </body>
 </html>
