--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
   <a href="https://scratch.mit.edu/projects/403789231/">geometry dash subzero hacked</a>
   <br>
   <a href="https://scratch.mit.edu/projects/405324048">geometry dash world toxic factory hacked</a>
+  <h1>geometry dash levels 4+ (unfinished)</h1>
+  <a href="https://scratch.mit.edu/projects/118638917/">geometry dash levels 4-6</a>
+  <br>
+    <a href="https://scratch.mit.edu/projects/120721851">geometry dash levels 7-8</a>
+    <br>
+    <a href="https://scratch.mit.edu/projects/140185501/">geometry dash levels 9-13</a>
+  <h1>mods and other stuff</h1>
+  <a href="https://scratch.mit.edu/projects/106125442/">steve dash</a>
+    <br>
+    <a href="https://scratch.mit.edu/projects/245970184/">geometry dash 2.2 cycles</a>
 </body>
 </html>
