--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
     <a href="https://scratch.mit.edu/projects/140185501/">geometry dash levels 9-13</a>
   <h1>mods and other stuff</h1>
-  <a href="https://scratch.mit.edu/projects/106125442/">steve dash</a>
+  <a href="https://scratch.mit.edu/projects/106125442/">steve dash (kinda fire ngl)</a>
     <br>
     <a href="https://scratch.mit.edu/projects/245970184/">geometry dash 2.2 cycles</a>
 </body>
