--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
 <head>
+<style>
+body {
+  background-image: url('https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/618cff3e20616-large.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
+<meta property="og:site_name" content="scratch geometry dash directory">
+<meta property="og:title" content="scratch geometry dash directory">
+<meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
+  <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
   <h1>normal games</h1>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
 <br>
