--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ body {
   background-attachment: fixed;  
   background-size: cover;
 }
+        @font-face { font-family: Pusab; src: url('https://github.com/Marc92020/geometry-dash-scratch-directory/blob/main/stuff/PUSAB___%5B1%5D.otf'); } 
+      p {
+         font-family: Pusab
+      }
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
