--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 </head>
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
-  <h1>normal games</h1>
+  <h1 style="color:white">normal games</h1>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
 <br>
 <a href="https://scratch.mit.edu/projects/143663274/">geometry dash meltdown</a>
@@ -28,7 +28,7 @@ body {
 <a href="https://scratch.mit.edu/projects/216343253/">geometry dash subzero</a>
 <br>
 <a href="https://scratch.mit.edu/projects/224236914/">geometry dash world toxic factory</a>
-  <h1>hacked versions</h1>
+  <h1 style="color:white">hacked versions</h1>
   <a href="https://scratch.mit.edu/projects/349655586/">geometry dash hacked</a>
   <br>
   <a href="https://scratch.mit.edu/projects/404062989">geometry dash meltdown hacked</a>
@@ -36,13 +36,13 @@ body {
   <a href="https://scratch.mit.edu/projects/403789231/">geometry dash subzero hacked</a>
   <br>
   <a href="https://scratch.mit.edu/projects/405324048">geometry dash world toxic factory hacked</a>
-  <h1>geometry dash levels 4+ (unfinished)</h1>
+  <h1 style="color:white">geometry dash levels 4+ (unfinished)</h1>
   <a href="https://scratch.mit.edu/projects/118638917/">geometry dash levels 4-6</a>
   <br>
     <a href="https://scratch.mit.edu/projects/120721851">geometry dash levels 7-8</a>
     <br>
     <a href="https://scratch.mit.edu/projects/140185501/">geometry dash levels 9-13</a>
-  <h1>mods and other stuff</h1>
+  <h1 style="color:white">mods and other stuff</h1>
   <a href="https://scratch.mit.edu/projects/106125442/">steve dash (kinda fire ngl)</a>
     <br>
     <a href="https://scratch.mit.edu/projects/245970184/">geometry dash 2.2 cycles</a>
