--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@ body {
       h1 {
          font-family: Pusab
       }
+#title{
+	color: white;
+	font-size: 40px;
+	-webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}  
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
@@ -20,7 +26,7 @@ body {
 </head>
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
-  <h1 style="color:white">normal games</h1>
+  <h1 id="title">normal games</h1>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
 <br>
 <a href="https://scratch.mit.edu/projects/143663274/">geometry dash meltdown</a>
