--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@ body {
 #title{
 	color: white;
 	font-size: 40px;
-	-webkit-text-stroke-width: 2px;
+	-webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+     text-shadow: 2px 4px 4px rgba(0,0,0,0);
 }  
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
-<meta property="og:site_name" content="scratch geometry dash directory">
+<meta property="og:site_name" content="'please help me i am dying' - marc92020, 2023">
 <meta property="og:title" content="scratch geometry dash directory">
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
