--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
-<meta property="og:site_name" content="'please help me i am dying' - marc92020, 2023">
+<meta property="og:site_name" content="i am in pain please help me">
 <meta property="og:title" content="scratch geometry dash directory">
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
@@ -35,7 +35,7 @@ body {
 <a href="https://scratch.mit.edu/projects/216343253/">geometry dash subzero</a>
 <br>
 <a href="https://scratch.mit.edu/projects/224236914/">geometry dash world toxic factory</a>
-  <h1 style="color:white">hacked versions</h1>
+  <h1 id="title">hacked versions</h1>
   <a href="https://scratch.mit.edu/projects/349655586/">geometry dash hacked</a>
   <br>
   <a href="https://scratch.mit.edu/projects/404062989">geometry dash meltdown hacked</a>
@@ -43,13 +43,13 @@ body {
   <a href="https://scratch.mit.edu/projects/403789231/">geometry dash subzero hacked</a>
   <br>
   <a href="https://scratch.mit.edu/projects/405324048">geometry dash world toxic factory hacked</a>
-  <h1 style="color:white">geometry dash levels 4+ (unfinished)</h1>
+  <h1 id="title">geometry dash levels 4+ (unfinished)</h1>
   <a href="https://scratch.mit.edu/projects/118638917/">geometry dash levels 4-6</a>
   <br>
     <a href="https://scratch.mit.edu/projects/120721851">geometry dash levels 7-8</a>
     <br>
     <a href="https://scratch.mit.edu/projects/140185501/">geometry dash levels 9-13</a>
-  <h1 style="color:white">mods and other stuff</h1>
+  <h1 id="title">mods and other stuff</h1>
   <a href="https://scratch.mit.edu/projects/106125442/">steve dash (kinda fire ngl)</a>
     <br>
     <a href="https://scratch.mit.edu/projects/245970184/">geometry dash 2.2 cycles</a>
