--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 </head>
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
-<img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo" width="1991" height="179">	
+<img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo%20(1).png" alt="logo" width="996" height="90">	
   <h1 id="title">normal games</h1>
 <a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
 <br>
