--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@ body {
 	-webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
      text-shadow: 2px 4px 4px rgba(0,0,0,0.3);
-}  
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
@@ -28,31 +34,31 @@ body {
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo%20(1).png" alt="logo" width="996" height="90">	
-  <h1 id="title">normal games</h1>
-<a href="https://scratch.mit.edu/projects/105500895">geometry dash</a>
+	<h1 id="title"><center>normal games</center></h1>
+	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
 <br>
-<a href="https://scratch.mit.edu/projects/143663274/">geometry dash meltdown</a>
+	<a href="https://scratch.mit.edu/projects/143663274/"><center>geometry dash meltdown</center></a>
 <br>
-<a href="https://scratch.mit.edu/projects/216343253/">geometry dash subzero</a>
+	<a href="https://scratch.mit.edu/projects/216343253/"><center>geometry dash subzero</center></a>
 <br>
-<a href="https://scratch.mit.edu/projects/224236914/">geometry dash world toxic factory</a>
-  <h1 id="title">hacked versions</h1>
-  <a href="https://scratch.mit.edu/projects/349655586/">geometry dash hacked</a>
+<a href="https://scratch.mit.edu/projects/224236914/"><center>geometry dash world toxic factory</center></a>
+	<h1 id="title"><center>hacked versions</center></h1>
+  <a href="https://scratch.mit.edu/projects/349655586/"><center>geometry dash hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/404062989">geometry dash meltdown hacked</a>
+  <a href="https://scratch.mit.edu/projects/404062989"><center>geometry dash meltdown hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/403789231/">geometry dash subzero hacked</a>
+  <a href="https://scratch.mit.edu/projects/403789231/"><center>geometry dash subzero hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/405324048">geometry dash world toxic factory hacked</a>
-  <h1 id="title">geometry dash levels 4+ (unfinished)</h1>
-  <a href="https://scratch.mit.edu/projects/118638917/">geometry dash levels 4-6</a>
+  <a href="https://scratch.mit.edu/projects/405324048"><center>geometry dash world toxic factory hacked</center></a>
+	<h1 id="title"><center>geometry dash levels 4+ (unfinished)</center></h1>
+	<a href="https://scratch.mit.edu/projects/118638917/"><center>geometry dash levels 4-6</center></a>
   <br>
-    <a href="https://scratch.mit.edu/projects/120721851">geometry dash levels 7-8</a>
+	<a href="https://scratch.mit.edu/projects/120721851"><center>geometry dash levels 7-8</center></a>
     <br>
-    <a href="https://scratch.mit.edu/projects/140185501/">geometry dash levels 9-13</a>
-  <h1 id="title">mods and other stuff</h1>
-  <a href="https://scratch.mit.edu/projects/106125442/">steve dash (kinda fire ngl)</a>
+	<a href="https://scratch.mit.edu/projects/140185501/"><center>geometry dash levels 9-13</center></a>
+	<h1 id="title"><center>mods and other stuff</center></h1>
+	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
     <br>
-    <a href="https://scratch.mit.edu/projects/245970184/">geometry dash 2.2 cycles</a>
+	<a href="https://scratch.mit.edu/projects/245970184/"><center>geometry dash 2.2 cycles</center></a>
 </body>
 </html>
