--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ img {
 </style>
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
-<meta property="og:site_name" content="i am in pain please help me">
+<meta property="og:site_name" content="e">
 <meta property="og:title" content="scratch geometry dash directory">
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
-<img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo%20(1).png" alt="logo" width="996" height="90">	
+<img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
 	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
 <br>
