--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <head>
 <style>
 body {
+@import url('https://fonts.googleapis.com/css?family=Lato');
+@font-face {font-family: Pusab; src: url('https://github.com/Marc92020/geometry-dash-scratch-directory/blob/main/stuff/PUSAB___%5B1%5D.otf')}
+	
   background-image: url('https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/618cff3e20616-large.png');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
 }
-        @font-face { font-family: Pusab; src: url('https://github.com/Marc92020/geometry-dash-scratch-directory/blob/main/stuff/PUSAB___%5B1%5D.otf'); } 
       h1 {
-         font-family: Pusab
+         font-family: Pusab, Arial
       }
 #title{
 	color: white;
