--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<html>
 <head>
 <style>
 body {
-@import url('https://fonts.googleapis.com/css?family=Lato');
-@font-face {font-family: Pusab; src: url('https://gdcolon.com/assets/Pusab.ttf')}
-	
+@font-face {font-family: Pusab; src: url('https://github.com/Marc92020/geometry-dash-scratch-directory/blob/main/stuff/PUSAB___%5B1%5D.otf')}
+
   background-image: url('https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/618cff3e20616-large.png');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
 }
       h1 {
-         font-family: Pusab, Arial
-	 color: white;
-	 font-size: 40px;
+         font-family: Pusab
+      }
+#title{
+	color: white;
+	font-size: 40px;
 	-webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: black;
-         text-shadow: 3px 3px 0px rgba(0,0,0,0.3);
+    -webkit-text-stroke-color: black;
+     text-shadow: 2px 4px 4px rgba(0,0,0,0.3);
 }
 img {
   display: block;
@@ -34,7 +34,7 @@ img {
 <body>
   <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
-	<h1><center>normal games</center></h1>
+	<h1 id="title"><center>normal games</center></h1>
 	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
 <br>
 	<a href="https://scratch.mit.edu/projects/143663274/"><center>geometry dash meltdown</center></a>
@@ -42,7 +42,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/216343253/"><center>geometry dash subzero</center></a>
 <br>
 <a href="https://scratch.mit.edu/projects/224236914/"><center>geometry dash world toxic factory</center></a>
-	<h1><center>hacked versions</center></h1>
+	<h1 id="title"><center>hacked versions</center></h1>
   <a href="https://scratch.mit.edu/projects/349655586/"><center>geometry dash hacked</center></a>
   <br>
   <a href="https://scratch.mit.edu/projects/404062989"><center>geometry dash meltdown hacked</center></a>
@@ -50,13 +50,13 @@ img {
   <a href="https://scratch.mit.edu/projects/403789231/"><center>geometry dash subzero hacked</center></a>
   <br>
   <a href="https://scratch.mit.edu/projects/405324048"><center>geometry dash world toxic factory hacked</center></a>
-	<h1><center>geometry dash levels 4+ (unfinished)</center></h1>
+	<h1 id="title"><center>geometry dash levels 4+ (unfinished)</center></h1>
 	<a href="https://scratch.mit.edu/projects/118638917/"><center>geometry dash levels 4-6</center></a>
   <br>
 	<a href="https://scratch.mit.edu/projects/120721851"><center>geometry dash levels 7-8</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/140185501/"><center>geometry dash levels 9-13</center></a>
-	<h1><center>mods and other stuff</center></h1>
+	<h1 id="title"><center>mods and other stuff</center></h1>
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/245970184/"><center>geometry dash 2.2 cycles</center></a>
