--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<style>
+<!-- <style>
 body {
 @font-face {font-family: Pusab; src: url('https://github.com/Marc92020/geometry-dash-scratch-directory/blob/main/stuff/PUSAB___%5B1%5D.otf')}
 
@@ -24,7 +24,8 @@ img {
   margin-right: auto;
   width: 50%;
 }
-</style>
+</style> -->
+<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 <title>scratch geometry dash directory</title>
 <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
 <meta property="og:site_name" content="e">
