--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ img {
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
-  <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM</p>
+  <p><center>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM. I AM ALSO ADDING UPDATES TO THE SITE</center></p>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
 	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
@@ -61,5 +61,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/245970184/"><center>geometry dash 2.2 cycles</center></a>
+	<br>
+	<h6>some text goes here</h6>
 </body>
 </html>
