--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/245970184/"><center>geometry dash 2.2 cycles</center></a>
 	<br>
 	<h1 id="title"><center>the 25 levels of christmas (do not question)</h1>
-		<a href="https://scratch.mit.edu/projects/467092299/">day 22</a>
+		<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
 		<br>
 	<h6>some text goes here</h6>
 </body>
