--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ img {
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
-  <p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM. I AM ALSO ADDING UPDATES TO THE SITE</p>
+  <center><p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM. I AM ALSO ADDING UPDATES TO THE SITE</p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
 	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
