--- a/index.html
+++ b/index.html
@@ -33,34 +33,34 @@ img {
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
-  <center><p>WEBSITE IN TESTING MODE. PLEASE IGNORE ANY STRANGE OR BROKEN THINGS, I WILL FIX THEM. I AM ALSO ADDING UPDATES TO THE SITE</p></center>
+  <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
-	<a href="https://scratch.mit.edu/projects/105500895"><center>geometry dash</center></a>
+	<a href="https://scratch.mit.edu/projects/105500895"><center>Geometry Dash</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/143663274/"><center>geometry dash meltdown</center></a>
+	<a href="https://scratch.mit.edu/projects/143663274/"><center>Geometry Dash Meltdown</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/216343253/"><center>geometry dash subzero</center></a>
+	<a href="https://scratch.mit.edu/projects/216343253/"><center>Geometry Dash Subzero</center></a>
 <br>
-<a href="https://scratch.mit.edu/projects/224236914/"><center>geometry dash world toxic factory</center></a>
+<a href="https://scratch.mit.edu/projects/224236914/"><center>Geometry Dash World Toxic Factory</center></a>
 	<h1 id="title"><center>hacked versions</center></h1>
-  <a href="https://scratch.mit.edu/projects/349655586/"><center>geometry dash hacked</center></a>
+  <a href="https://scratch.mit.edu/projects/349655586/"><center>Geometry Dash Hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/404062989"><center>geometry dash meltdown hacked</center></a>
+  <a href="https://scratch.mit.edu/projects/404062989"><center>Geometry Dash Meltdown Hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/403789231/"><center>geometry dash subzero hacked</center></a>
+  <a href="https://scratch.mit.edu/projects/403789231/"><center>Geometry Dash Subzero Hacked</center></a>
   <br>
-  <a href="https://scratch.mit.edu/projects/405324048"><center>geometry dash world toxic factory hacked</center></a>
+  <a href="https://scratch.mit.edu/projects/405324048"><center>Geometry Dash World Toxic Factory Hacked</center></a>
 	<h1 id="title"><center>geometry dash levels 4+ (unfinished)</center></h1>
-	<a href="https://scratch.mit.edu/projects/118638917/"><center>geometry dash levels 4-6</center></a>
+	<a href="https://scratch.mit.edu/projects/118638917/"><center>Geometry Dash Levels 4-6</center></a>
   <br>
-	<a href="https://scratch.mit.edu/projects/120721851"><center>geometry dash levels 7-8</center></a>
+	<a href="https://scratch.mit.edu/projects/120721851"><center>Geometry Dash Levels 7-8</center></a>
     <br>
-	<a href="https://scratch.mit.edu/projects/140185501/"><center>geometry dash levels 9-13</center></a>
+	<a href="https://scratch.mit.edu/projects/140185501/"><center>Geometry Dash Levels 9-13</center></a>
 	<h1 id="title"><center>mods and other stuff</center></h1>
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
     <br>
-	<a href="https://scratch.mit.edu/projects/245970184/"><center>geometry dash 2.2 cycles</center></a>
+	<a href="https://scratch.mit.edu/projects/245970184/"><center>Geometry Dash 2.2 Cycles</center></a>
 	<br>
 	<h1 id="title"><center>the 25 levels of christmas (do not question)</h1>
 		<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
