--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/245970184/"><center>Geometry Dash 2.2 Cycles</center></a>
 	<br>
 	<h1 id="title"><center>the 25 levels of christmas (do not question)</h1>
-		<a href="https://scratch.mit.edu/projects/461805401/"><center>day 10</center</a>
+		<a href="https://scratch.mit.edu/projects/461805401/"><center>day 10</center</center></a>
 			<br>
 		<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
 		<br>
