--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@ img {
 	<a href="https://scratch.mit.edu/projects/120721851"><center>Geometry Dash Levels 7-8</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/140185501/"><center>Geometry Dash Levels 9-13</center></a>
+	<h1 id="title"><center>level editors</center></h1>
+	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall</center></a>
+	<br>
+	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
+	<br>
 	<h1 id="title"><center>mods and other stuff</center></h1>
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
     <br>
