--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ img {
     <br>
 	<a href="https://scratch.mit.edu/projects/140185501/"><center>Geometry Dash Levels 9-13</center></a>
 	<h1 id="title"><center>level editors</center></h1>
-	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall</center></a>
+	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall (doesnt use griffpatch's gd engine)</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
 	<br>
