--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
 	<br>
-	<h1 id="title">real geometry dash (READ -file goes here- BEFORE DOWNLOADING)</h1>
-	<a href="https://steamunlocked.net/42-geometry-dash-free-game-download/">real geometry dash free</a>
+	<h1 id="title"><center>real geometry dash (READ -file goes here- BEFORE DOWNLOADING)</center></h1>
+	<a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>real geometry dash free</center></a>
 	<br>
 	<h6>some text goes here</h6>
 </body>
