--- a/pirate.html
+++ b/pirate.html
@@ -4,19 +4,19 @@
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
 </head>
 <body>
-  <h1 id="title">so, you want geometry dash, huh?</h1>
-  <p><center>listen, i have one warning real quick: this probably counts as piracy. you may or may not be commiting a crime. i do not know. well this is a real and actually TRUSTED thing. its called steamunlocked. i recommend following these instructions to avoid getting viruses (cuz idk, maybe you can)</p>
+  <h1 id="title"><center>so, you want geometry dash, huh?</center></h1>
+  <p><center>listen, i have one warning real quick: this probably counts as piracy. you may or may not be commiting a crime. i do not know. well this is a real and actually TRUSTED thing. its called steamunlocked. i recommend following these instructions to avoid getting viruses (cuz idk, maybe you can)</center></p>
   <br>
-  <h1 id="title">step 1: GET IT FROM THE RIGHT PLACE</h1>
-  <p>listen, i wont host it myself. i dont want to risk going into court. but i will provide the link to the steam unlocked page where you can get geo dash for free</p>
-  <a href="https://steamunlocked.net/42-geometry-dash-free-game-download/">download link</a>
+  <h1 id="title"><center>step 1: GET IT FROM THE RIGHT PLACE</center></h1>
+  <p><center>listen, i wont host it myself. i dont want to risk going into court. but i will provide the link to the steam unlocked page where you can get geo dash for free</center></p>
+  <a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>download link</center></a>
   <br>
-  <p>USE THAT LINK, YOU MIGHT GET VIRUSES IF YOU DONT</p>
+  <p><center>USE THAT LINK, YOU MIGHT GET VIRUSES IF YOU DONT</center></p>
   <br>
-  <h1 id="title">step 2: the download</h1>
-  <p>by going to the download link, you risk something. idk what it is, my adblocker blocks it. so clikc on download, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</p>
+  <h1 id="title"><center>step 2: the download</center></h1>
+  <p><center>by going to the download link, you risk something. idk what it is, my adblocker blocks it. so clikc on download, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</center></p>
   <br>
-  <h1 id="title">step 3: do the stuff the website says</h1>
-  <p>i havent tested this myself yet so i cant provide anymore instructions. just follow the instructions steam unlocked tells you to</p>
-  <a href="https://marc92020.github.io/geometry-dash-scratch-directory/">return to home</a>
+  <h1 id="title"><center>step 3: do the stuff the website says</center></h1>
+  <p><center>i havent tested this myself yet so i cant provide anymore instructions. just follow the instructions steam unlocked tells you to</center></p>
+  <a href="https://marc92020.github.io/geometry-dash-scratch-directory/"><center>return to home</center></a>
 </body>
