--- a/pirate.html
+++ b/pirate.html
@@ -18,5 +18,7 @@
   <br>
   <h1 id="title"><center>step 3: do the stuff the website says</center></h1>
   <center><p>i havent tested this myself yet so i cant provide anymore instructions. just follow the instructions steam unlocked tells you to</p></center>
+  <br>
+<center><p>or, you could just <a href="https://store.steampowered.com/app/322170/Geometry_Dash/">buy the real geometry dash on steam</a> that is much more safer than this method</p></center>
   <a href="https://marc92020.github.io/geometry-dash-scratch-directory/"><center>return to home</center></a>
 </body>
