--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ img {
 	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
 	<br>
 	<h1 id="title"><center>mods and other stuff</center></h1>
+		<a href="https://scratch.mit.edu/projects/860151753/">Egg Dash (its much better than the other geometry dash remakes on scratch)</a>
+		<br>
 	<a href="https://scratch.mit.edu/projects/478780753/"><center>Geometry Dash Just Keep Jumping (as soon as the level starts hold jump its that easy)</center></a>
     <br>
 	<a href="https://scratch.mit.edu/projects/106125442/"><center>steve dash (kinda fire ngl)</center></a>
