--- a/pirate.html
+++ b/pirate.html
@@ -4,21 +4,27 @@
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/geodash.ico">
 </head>
 <body>
-  <h1 id="title"><center>so, you want geometry dash, huh?</center></h1>
-  <center><p>listen, i have one warning real quick: this probably counts as piracy. you may or may not be commiting a crime. i do not know. well this is a real and actually TRUSTED thing. its called steamunlocked. i recommend following these instructions to avoid getting viruses (cuz idk, maybe you can)</p></center>
+  <h1 id="title"><center>how to get free geometry dash</center></h1>
+  <center><p>i dont condone piracy (please dont smite me github) but if you want free geometry dash heres a guide to get it virus free anyway (ill probably delete this so i dont get eaten by github)</p></center>
   <br>
+  <h1><center>this only works on windows, go find another place to get free gd i dont use mac or linux</center></h1>
   <h1 id="title"><center>step 1: GET IT FROM THE RIGHT PLACE</center></h1>
-  <center><p>listen, i wont host it myself. i dont want to risk going into court. but i will provide the link to the steam unlocked page where you can get geo dash for free</p></center>
+  <center><p>im not hosting it myself because i dont want to get this thing shut down. but i will provide the link to a website that i trust</p></center>
   <a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>download link</center></a>
   <br>
   <center><p>USE THAT LINK, YOU MIGHT GET VIRUSES IF YOU DONT</p></center>
   <br>
   <h1 id="title"><center>step 2: the download</center></h1>
-  <center><p>by going to the download link, you risk something. idk what it is, my adblocker blocks it. so clikc on download, wait for the upload haven download wait time to finish, click on download there, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</p></center>
+  <center><p>by going to the download link, you might encounter some malicious ad, but you probably have a functioning brain so you know not to fall for it. wait for the upload haven download wait time to finish, click on download there, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</p></center>
   <br>
-  <h1 id="title"><center>step 3: do the stuff the website says</center></h1>
-  <center><p>i havent tested this myself yet so i cant provide anymore instructions. just follow the instructions steam unlocked tells you to</p></center>
+  <h1 id="title"><center>step 3: extract it</center></h1>
+  <center><p>when its done you have to extract it. if you somehow dont know how, right click the file in file explorer (if you dont use file explorer then idk figure out how to extract files) then press extract then wait.</p></center>
   <br>
-<center><p>or, you could just <a href="https://store.steampowered.com/app/322170/Geometry_Dash/">buy the real geometry dash on steam</a> that is much more safer than this method</p></center>
+  <h1 id="title"><center>step 4: download shit if you have to</center></h1>
+  <center><p>if your thing doesnt work you have to run all the files in the "_Redist" folder for it to work</p></center>
+  <br>
+  <p>there you now have free gd enjoy</p>
+  <br>
+<center><p>or, you could just <a href="https://store.steampowered.com/app/322170/Geometry_Dash/">buy the real geometry dash on steam</a> if you are willing to spend like 4 dollars (omg so expensive)</p></center>
   <a href="https://marc92020.github.io/geometry-dash-scratch-directory/"><center>return to home</center></a>
 </body>
