--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/194164289"><center>Geometry Dash Levels 14-15</center>
 	<br>
-	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry dash Levels 16-21</a>
+	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry Dash Levels 16-21</a>
+	<br>
+	<a href="https://scratch.mit.edu/projects/942961961/"><center>Geometry Dash Level 22 (Dash)</center></a>
+	<br>
+	<h1 id="title"><center>other levels</center><h1>
+	<a href="https://scratch.mit.edu/projects/201389627/"><center>Bloodbath</center></a>
+	<br>
+	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
+	<a href="https://games-cloudflare-2.alegithomeworksite.online/tidal-wave/"><center>Tidal Wave (if its blocked create an issue on the <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">github repository</a> and ill use another site)</center></a>
+	<br>
+	<a href="https://scratch.mit.edu/projects/356595737/"><center>Cadenza</center></a>
 	<br>
 	<h1 id="title"><center>level editors</center></h1>
 	<a href="https://scratch.mit.edu/projects/617482003/"><center>Geometry Dash Level Editor by CaptainFlufBall (doesnt use griffpatch's gd engine)</center></a>
@@ -68,7 +78,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
 	<br>
 	<h1 id="title"><center>mods and other stuff</center></h1>
-		<a href="https://scratch.mit.edu/projects/860151753/">Egg Dash (its much better than the other geometry dash remakes on scratch)</a>
+	<a href="https://scratch.mit.edu/projects/860151753/">Egg Dash (its much better than the other geometry dash remakes on scratch)</a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/478780753/"><center>Geometry Dash Just Keep Jumping (as soon as the level starts hold jump its that easy)</center></a>
     <br>
@@ -81,7 +91,7 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
 	<br>
-	<h1 id="title"><center>real geometry dash free (READ <a href="pirate.html">THIS WEBSITE</a> BEFORE DOWNLOADING)</center></h1>
+	<h1 id="title"><center>real geometry dash free (GO <a href="pirate.html">HERE</a> BEFORE DOWNLOADING)</center></h1>
 	<a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>real geometry dash free</center></a>
 	<br>
 	<h6>some text goes here</h6>
