--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/942961961/"><center>Geometry Dash Level 22 (Dash)</center></a>
 	<br>
-	<h1 id="title"><center>other levels</center><h1>
+	<h1 id="title"><center>other levels</center></h1>
 	<a href="https://scratch.mit.edu/projects/201389627/"><center>Bloodbath</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
