--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
 	<br>
-	<a href="https://games-cloudflare-2.alegithomeworksite.online/tidal-wave/"><center>Tidal Wave (if its blocked create an issue on the <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">github repository</a> and ill use another site)</center></a>
+	<center><a href="https://games-cloudflare-2.alegithomeworksite.online/tidal-wave/">Tidal Wave</a> (if its blocked create an issue on the <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">github repository</a> and ill use another site)</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/356595737/"><center>Cadenza</center></a>
 	<br>
