--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/194164289"><center>Geometry Dash Levels 14-15</center>
 	<br>
-	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry Dash Levels 16-21</a>
+	<a href="https://scratch.mit.edu/projects/675486686/"><center>Geometry Dash Levels 16-21</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/942961961/"><center>Geometry Dash Level 22 (Dash)</center></a>
 	<br>
