--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/536483250/"><center><p>Brimstone Rebirth</p></center>
 	<br>
-	<center><a href="https://games-cloudflare-2.alegithomeworksite.online/tidal-wave/">Tidal Wave</a> (if its blocked create an issue on the <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">github repository</a> and ill use another site)</center></a>
+	<center><a href="https://scratch.mit.edu/projects/906130668/">Tidal Wave</a> (if its blocked create an issue on the <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">github repository</a> and ill use another site)</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/356595737/"><center>Cadenza</center></a>
 	<br>
@@ -79,7 +79,7 @@ img {
 	<a href="https://scratch.mit.edu/projects/305194541/"><center>Geometry Dash Level Editor by iPhone_ATT_TWC_tests</center></a>
 	<br>
 	<h1 id="title"><center>mods and other stuff</center></h1>
-	<a href="https://scratch.mit.edu/projects/860151753/">Egg Dash (its much better than the other geometry dash remakes on scratch)</a>
+	<a href="https://scratch.mit.edu/projects/860151753/"><center>Egg Dash (its much better than the other geometry dash remakes on scratch)</center></a>
 	<br>
 	<a href="https://scratch.mit.edu/projects/478780753/"><center>Geometry Dash Just Keep Jumping (as soon as the level starts hold jump its that easy)</center></a>
     <br>
