--- a/pirate.html
+++ b/pirate.html
@@ -9,10 +9,7 @@
   <br>
   <h1><center>this only works on windows, go find another place to get free gd i dont use mac or linux</center></h1>
   <h1 id="title"><center>step 1: GET IT FROM THE RIGHT PLACE</center></h1>
-  <center><p>im not hosting it myself because i dont want to get this thing shut down. but i will provide the link to a website that i trust</p></center>
-  <a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>download link</center></a>
-  <br>
-  <center><p>USE THAT LINK, YOU MIGHT GET VIRUSES IF YOU DONT</p></center>
+  <center><p>im not hosting it myself because i dont want to get this thing shut down. there used to be a link here but it had viruses even though my friend swore on his soul it didn't. the guide to get it working properly is still here if you remember the link that used to be here, but i'm not linking it myself anymore. sorry.</p></center>
   <br>
   <h1 id="title"><center>step 2: the download</center></h1>
   <center><p>by going to the download link, you might encounter some malicious ad, but you probably have a functioning brain so you know not to fall for it. wait for the upload haven download wait time to finish, click on download there, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</p></center>
