--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ img {
 	<br>
 	<a href="https://scratch.mit.edu/projects/467092299/"><center>day 22</center></a>
 	<br>
-	<h1 id="title"><center>real geometry dash free (GO <a href="pirate.html">HERE</a> BEFORE DOWNLOADING)</center></h1>
-	<a href="https://steamunlocked.net/42-geometry-dash-free-game-download/"><center>real geometry dash free</center></a>
+	<h1 id="title"><center>real geometry dash free</center></h1>
+	<a href="pirate.html"><center>guide because i don't link it here anymore</center></a>
 	<br>
 	<h6>some text goes here</h6>
 </body>
