--- a/pirate.html
+++ b/pirate.html
@@ -12,7 +12,7 @@
   <center><p>im not hosting it myself because i dont want to get this thing shut down. there used to be a link here but it had viruses even though my friend swore on his soul it didn't. the guide to get it working properly is still here if you remember the link that used to be here, but i'm not linking it myself anymore. sorry.</p></center>
   <br>
   <h1 id="title"><center>step 2: the download</center></h1>
-  <center><p>by going to the download link, you might encounter some malicious ad, but you probably have a functioning brain so you know not to fall for it. wait for the upload haven download wait time to finish, click on download there, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website streamunlocked took you to (which should be UploadHaven) and then you get free geometry dash hooray</p></center>
+  <center><p>by going to the download link, you might encounter some malicious ad, but you probably have a functioning brain so you know not to fall for it. wait for the upload haven download wait time to finish, click on download there, CLOSE THE TAB THTA SHOWS UP, then click the download button again on the website the link took you to (which should be UploadHaven) and then you get free geometry dash hooray</p></center>
   <br>
   <h1 id="title"><center>step 3: extract it</center></h1>
   <center><p>when its done you have to extract it. if you somehow dont know how, right click the file in file explorer (if you dont use file explorer then idk figure out how to extract files) then press extract then wait.</p></center>
