--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ img {
   <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
-	<a href="https://scratch.mit.edu/projects/105500895"><center>Geometry Dash</center></a>
+	<a href="/GeometryDash.html"><center>Geometry Dash (no longer hosted on scratch since griffpatch's project sadly got taken down)</center></a>
 <br>
 	<a href="https://scratch.mit.edu/projects/143663274/"><center>Geometry Dash Meltdown</center></a>
 <br>
