--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ img {
 <meta property="og:description" content="directory for goofy scratch geometry dash remakes and stuff">  
 </head>
 <body>
-	<h1><center>I AM AWARE THAT A LOT OF PROJECTS ARE GONE. THIS IS BECAUSE ROBTOP HAS BEEN TAKING THEM DOWN. i'm currently trying to find backups to put here, but i may not be able to restore everything. sorry for the inconvenience.</center></h1>
+	<h1 id="title"><center>I AM AWARE THAT A LOT OF PROJECTS ARE GONE. THIS IS BECAUSE ROBTOP HAS BEEN TAKING THEM DOWN. i'm currently trying to find backups to put here, but i may not be able to restore everything. sorry for the inconvenience.</center></h1>
   <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
 	<h1 id="title"><center>normal games</center></h1>
@@ -41,7 +41,7 @@ img {
 <br>
 	<a href="https://scratch.mit.edu/projects/143663274/"><center>Geometry Dash Meltdown</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/216343253/"><center>Geometry Dash Subzero</center></a>
+	<a href="/geometry-dash-scratch-directory/backups/subzero.html"><center>Geometry Dash Subzero</center></a>
 <br>
 <a href="https://scratch.mit.edu/projects/224236914/"><center>Geometry Dash World Toxic Factory</center></a>
 	<h1 id="title"><center>hacked versions</center></h1>
