--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ img {
 	<h1 id="title"><center>I AM AWARE THAT A LOT OF PROJECTS ARE GONE. THIS IS BECAUSE ROBTOP HAS BEEN TAKING THEM DOWN. i'm currently trying to find backups to put here, but i may not be able to restore everything. sorry for the inconvenience.</center></h1>
   <center><p>suggest scratch geometry dash games <a href="https://github.com/Marc92020/geometry-dash-scratch-directory/issues">here</a></p></center>
 <img src="https://raw.githubusercontent.com/Marc92020/geometry-dash-scratch-directory/main/stuff/logo.png" alt="logo">
+	<center><p>due to robtop taking gd scratch games down, most versions linked here are now hosted on this site.</p></center>
 	<h1 id="title"><center>normal games</center></h1>
-	<a href="/geometry-dash-scratch-directory/GeometryDash.html"><center>Geometry Dash (no longer hosted on scratch since griffpatch's project sadly got taken down)</center></a>
+	<a href="/geometry-dash-scratch-directory/GeometryDash.html"><center>Geometry Dash</center></a>
 <br>
 	<a href="https://scratch.mit.edu/projects/143663274/"><center>Geometry Dash Meltdown</center></a>
 <br>
