--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ img {
 	<h1 id="title"><center>normal games</center></h1>
 	<a href="/geometry-dash-scratch-directory/GeometryDash.html"><center>Geometry Dash</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/143663274/"><center>Geometry Dash Meltdown</center></a>
+	<a href="/geometry-dash-scratch-directory/backups/meltdown.html"><center>Geometry Dash Meltdown</center></a>
 <br>
 	<a href="/geometry-dash-scratch-directory/backups/subzero.html"><center>Geometry Dash Subzero</center></a>
 <br>
