--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img {
 <br>
 	<a href="/geometry-dash-scratch-directory/backups/world-dashlands.html"><center>Geometry Dash World Dashlands</center></a>
 <br>
-	<a href="https://scratch.mit.edu/projects/224236914/"><center>Geometry Dash World Toxic Factory</center></a>
+	<a href="/geometry-dash-scratch-directory/backups/world-tf.html"><center>Geometry Dash World Toxic Factory</center></a>
 	<h1 id="title"><center>hacked versions</center></h1>
   <a href="https://scratch.mit.edu/projects/349655586/"><center>Geometry Dash Hacked</center></a>
   <br>
